Revert "work-item bugs fixed on small devices"
This reverts commit 8c02232862c9564e09954d45aa9c5d97cc63f85b.

--- a/assets/styles/work.css
+++ b/assets/styles/work.css
@@ -197,11 +197,3 @@ section.work .work-item ul.sadili-slider li:nth-child(2) {
 section.work .work-item ul.sadili-slider li:last-child {
   background-image: url(../images/sadili-3.png);
 }
-
-/* small devices */
-@media only screen and (max-width : 482px) {
-  section.work > .container .btn {
-    padding: 10px 30px;
-    font-size: 14px;
-  }
-}
